--- a/API_RESTFULL/frontend/src/pages/product/Product.scss
+++ b/API_RESTFULL/frontend/src/pages/product/Product.scss
@@ -3,10 +3,11 @@
 #page-product {
     background-color: var(--background-1);
     width: 100%;
-    height: 100vh;
+    height: auto;
     display: grid;
     place-items: center;
     grid-template-rows: auto 1fr 70px;
+    margin: auto;
 
     .container-header-product {
         width: 95%;
@@ -42,7 +43,7 @@
         justify-content: space-around;
 
         .container-img-product {
-            width: 95%;
+            width: 80%;
             height: 50%;
             border-radius: 20px;
             overflow: hidden;
@@ -91,7 +92,7 @@
             width: 90%;
             height: auto;
             max-height: 200px;
-            gap: 10px;
+            gap: 2px;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
